--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<a href="https://www.youtube.com/channel/UC_DvRQ8QMiipLJelZLSSOEQ" style="padding: 5px;">
 					<img src="site/youtube.png" width="50" height="50">
 				</a>
-				<a href="https://www.youtube.com/channel/UC_DvRQ8QMiipLJelZLSSOEQ" style="padding: 5px;">
+				<a href="https://github.com/CS-Shark-git/" style="padding: 5px;">
 					<img src="site/github.png" width="50" height="50">
 				</a></p>				
 
