--- a/index.html
+++ b/index.html
@@ -17,22 +17,33 @@
 		<p align="center" style="font-size: 80px; font-family: 'Ubuntu', sans-serif;margin-top: 0; margin-bottom: 2%; color: white;">CS-Shark</p>
 		<p align="center" style="font-size: 30px; font-family: 'Ubuntu', sans-serif;margin-top: 0; margin-bottom: 2%; color: white;">.NET Developer</p>
 
-		<div class="div-con">
-				<p align="center" style="padding-top: 2%"><a href="https://t.me/cs_shark" style="padding: 5px;">
-					<img src="site/telegram.png" width="50" height="50">
+		<div>
+				<p align="center" style="padding-top: 2%"><a href="https://t.me/cs_shark" style="padding: 5px;" class="image">
+					<img src="site/telegram.png" width="50" height="50" class="icon">
 				</a>
-				<a href="https://discord.gg/EQvheP4Haf" style="padding: 5px;">
-					<img src="site/discord.png" width="50" height="50">
+				<a href="https://discord.gg/EQvheP4Haf" style="padding: 5px;" class="image">
+					<img src="site/discord.png" width="50" height="50" class="icon">
 				</a>
-				<a href="https://www.youtube.com/channel/UC_DvRQ8QMiipLJelZLSSOEQ" style="padding: 5px;">
-					<img src="site/youtube.png" width="50" height="50">
+				<a href="https://www.youtube.com/channel/UC_DvRQ8QMiipLJelZLSSOEQ" style="padding: 5px;" class="image">
+					<img src="site/youtube.png" width="50" height="50" class="icon">
 				</a>
-				<a href="https://github.com/CS-Shark-git/" style="padding: 5px;">
-					<img src="site/github.png" width="50" height="50">
+				<a href="https://github.com/CS-Shark-git/" style="padding: 5px;" class="image">
+					<img src="site/github.png" width="50" height="50" class="icon">
 				</a></p>				
 
 		</div>
 		<br>
 		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<hr class="thin-line">
+		<br>
+		<p align="center" style="font-size: 14px; font-family: 'Ubuntu', sans-serif;margin-top: 0; margin-bottom: 2%; color: white;">Powered by <a href="https://kay-software.ru/">Kay Software</a></p>
 </body>
 </html>
