--- a/index.html
+++ b/index.html
@@ -32,18 +32,6 @@
 				</a></p>				
 
 		</div>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<hr class="thin-line">
-		<br>
-		<p align="center" style="font-size: 14px; font-family: 'Ubuntu', sans-serif;margin-top: 0; margin-bottom: 2%; color: white;">Powered by <a href="https://kay-software.ru/">Kay Software</a></p>
+		<p align="center" style="font-size: 14px; font-family: 'Ubuntu', sans-serif;margin-top: 0; margin-bottom: 2%; color: white; margin-top: 16%;">Powered by <a href="https://kay-software.ru/">Kay Software</a></p>
 </body>
 </html>
