--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="background">
 		<br>		
-		<p align="center" style="padding-top: 12%;"><img class="round-img" src="site/avatar.png" width="250" height="250"></p>
+		<p align="center" style="padding-top: 12%;"><img class="round-img" src="site/avatar.jpg" width="250" height="250"></p>
 		<hr class="line">		
 	</div>	
 		<p align="center" style="font-size: 80px; font-family: 'Ubuntu', sans-serif;margin-top: 0; margin-bottom: 2%; color: white;">CS-Shark</p>
