--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" type="text/css" href="site/main.css">
+	<script src="http://www.fortress-design.com/js/snow-fall.js" type="text/javascript"></script>
 	<meta charset="utf-8">
 	<title>CS-Shark</title>
 </head>
@@ -13,8 +14,8 @@
 		<br>		
 		<p align="center" style="padding-top: 12%;"><img class="round-img" src="site/avatar.jpg" width="250" height="250"></p>
 		<hr class="line">		
-	</div>	
-		<p align="center" style="font-size: 80px; font-family: 'Ubuntu', sans-serif;margin-top: 0; margin-bottom: 2%; color: white;">CS-Shark</p>
+	</div>
+		<p align="center" style="font-size: 80px; font-family: 'Ubuntu', sans-serif;margin-top: 0; margin-bottom: 2%; color: skyblue;">CS-Shark</p>
 		<p align="center" style="font-size: 30px; font-family: 'Ubuntu', sans-serif;margin-top: 0; margin-bottom: 2%; color: white;">.NET Developer</p>
 
 		<div>
